--- a/miniGames/src/main/resources/templates/index.html
+++ b/miniGames/src/main/resources/templates/index.html
@@ -1,10 +1,38 @@
 <!DOCTYPE html>
-<html lang="en" xmlns:th="http://www.thymeleaf.org">
-<head>
+<html lang="en"><head>
     <meta charset="UTF-8">
-    <title>Title</title>
+    <title>mini Games</title>
+	<meta name="viewport" content="width=device-width, initial-scale=1.0">
+	<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
+	<link href="/css/style.css" rel="stylesheet">
 </head>
 <body>
-    <h1>Name</h1>
-</body>
-</html>
+	<div class="bg-gradient-js w-100 min-height-100vh">
+	<div class="container">
+		<div class="pricing-header p-3 pb-md-4 mx-auto text-center">
+		      <h1 class="display-4 fw-normal text-body-emphasis">미니게임</h1>
+		      <p class="fs-5 text-body-secondary">간단하게 즐기는 미니게임! 지금 시작해보세요</p>
+		</div>
+		<div class="row row-cols-1 row-cols-md-3 mb-3 text-center">
+		      <div class="col">
+		        <div class="card mb-4 rounded-3 shadow-sm">
+		          <div class="card-header py-3">
+		            <h4 class="my-0 fw-normal">가위바위보게임</h4>
+		          </div>
+		          <div class="card-body">
+		            이미지
+		            <a href="/rockPaperScissorsPlay" class="w-100 btn btn-lg btn-outline-primary">시작하기</a>
+		          </div>
+		        </div>
+		      </div>
+		     
+		      
+		    </div>
+		
+		<a href="">주사위게임</a>
+		<a href="">번호추첨게임</a>
+	</div>
+	</div>
+
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
+</body></html>
