css 적용 업로드

--- a/miniGames/src/main/resources/templates/index.html
+++ b/miniGames/src/main/resources/templates/index.html
@@ -7,11 +7,11 @@
 	<link href="/css/style.css" rel="stylesheet">
 </head>
 <body>
-	<div class="bg-gradient-js w-100 min-height-100vh">
+	<div class="bg-gradient-js w-100 min-height-100vh d-flex align-items-center">
 	<div class="container">
 		<div class="pricing-header p-3 pb-md-4 mx-auto text-center">
-		      <h1 class="display-4 fw-normal text-body-emphasis">미니게임</h1>
-		      <p class="fs-5 text-body-secondary">간단하게 즐기는 미니게임! 지금 시작해보세요</p>
+		      <h1 class="display-4 fw-bold text-white">미니게임</h1>
+		      <p class="fs-5 text-white">간단하게 즐기는 미니게임! 지금 시작해보세요</p>
 		</div>
 		<div class="row row-cols-1 row-cols-md-3 mb-3 text-center">
 		      <div class="col">
